syntax = "proto3";

package auth;

option go_package = "vocab_service/proto";

message TokenRequest {
    string token = 1;
}

message UserIdResponse {
    uint32 user_id = 1;
}